# csml-engine

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Procfile  README.md  app.json  blueprint  build.rs  my_button.tcsml  package.json  run.sh  test.json  testv1.CSML  testv2.CSML  testv3.CSML
bindings/android/: Cargo.toml  Readme.md
bindings/android/src/: lib.rs
bindings/aws_lambda/: Cargo.toml
bindings/aws_lambda/src/: helpers.rs  main.rs  routes.rs
bindings/aws_lambda/src/routes/: bot_versions.rs  bots.rs  clean_data.rs  clients.rs  conversations.rs  create_bot.rs  create_bot_version.rs  get_bot_by_id.rs  get_bot_by_version_id.rs  get_bot_versions.rs  get_last_bot.rs  get_last_bot_version.rs  memories.rs  messages.rs  migrations.rs  run.rs  sns.rs  state.rs  validate.rs
bindings/ios/: Cargo.toml  Readme.md  build.sh
bindings/ios/src/: lib.rs
bindings/node/native/: Cargo.toml  package-lock.json  package.json
bindings/node/native/src/: lib.rs
csml_cli/: Cargo.toml  README.md
csml_cli/bot/: .gitignore  manifest.yaml
csml_cli/bot/src/: default.csml
csml_cli/src/: init_package.rs  main.rs  run.rs
csml_cli/src/interface/: chat_menu.rs  chat_widget.rs  init.rs  init_menu.rs  main_menu.rs  menu_widget.rs  mod.rs  select_bot.rs  ui_image.rs
csml_engine/: Cargo.toml  diesel.toml
csml_engine/CSML/: flow.csml  flow2.csml
csml_engine/CSML/test/goto_flow/: bot.json
csml_engine/examples/: command_line.rs  fold_bot.rs  get_messages.rs
csml_engine/migrations/2021-08-18-071000_create_csml_bot/: down.sql  up.sql
csml_engine/migrations/2021-08-18-071158_create_client/: down.sql  up.sql
csml_engine/migrations/2021-08-18-071204_create_interactions/: down.sql  up.sql
csml_engine/migrations/2021-08-18-130236_create_conversations/: down.sql  up.sql
csml_engine/migrations/2021-08-18-202248_create_memories/: down.sql  up.sql
csml_engine/migrations/2021-08-18-202258_create_messages/: down.sql  up.sql
csml_engine/migrations/2021-08-18-203706_create_nodes/: down.sql  up.sql
csml_engine/migrations/2021-08-18-203714_create_states/: down.sql  up.sql
csml_engine/migrations/2021-08-30-130425_csml_initial_setup/: down.sql
csml_engine/migrations/postgresql/2021-08-30-130425_csml_initial_setup/: down.sql  up.sql
csml_engine/migrations/postgresql/2021-09-09-130425_csml_add_ttl/: down.sql  up.sql
csml_engine/src/: data.rs  encrypt.rs  error_messages.rs  init.rs  interpreter_actions.rs  lib.rs  send.rs  utils.rs
csml_engine/src/db_connectors/: bot.rs  clean_db.rs  conversations.rs  db_test.rs  interactions.rs  memories.rs  messages.rs  mod.rs  nodes.rs  state.rs  user.rs  utils.rs
csml_engine/tests/: test_bot.rs
csml_interpreter/: Cargo.toml  README.md
csml_interpreter/CSML/basic_test/: context.csml  continue.csml  event.csml  generic_component.csml  goto_vars.csml  hold.csml  if_statement.csml  infinite_loop.csml  metadata.csml  object.csml  update.csml  while_loops.csml
csml_interpreter/CSML/examples/: hello_world.csml  memory.csml  metadata.csml  module.csml
csml_interpreter/components/: audio.json  carousel.json  question.json  video.json
csml_interpreter/examples/: bot.rs  event.rs  factorial.rs  hello_world.rs  memory.rs  metadata.rs  modules.rs
csml_interpreter/src/: clean_step.rs  data.rs  error_format.rs  fold_bot.rs  imports.rs  interpreter.rs  lib.rs  linter.rs  parser.rs
csml_interpreter/src/data/: ast.rs  context.rs  csml_bot.rs  csml_flow.rs  csml_logs.rs  csml_result.rs  data.rs  error_info.rs  event.rs  fn_args_type.rs  hold.rs  literal.rs  memories.rs  message.rs  message_data.rs  msg.rs  position.rs  primitive.rs  tokens.rs  warnings.rs
csml_interpreter/src/error_format/: data.rs
csml_interpreter/src/interpreter/: ast_interpreter.rs  builtins.rs  components.rs  function_scope.rs  json_to_rust.rs  variable_handler.rs
csml_interpreter/src/linter/: data.rs  linter.rs
csml_interpreter/src/parser/: parse_actions.rs  parse_braces.rs  parse_built_in.rs  parse_closure.rs  parse_comments.rs  parse_constant.rs  parse_expand_string.rs  parse_foreach.rs  parse_functions.rs  parse_goto.rs  parse_idents.rs  parse_if.rs  parse_import.rs  parse_insert.rs  parse_literal.rs  parse_object.rs  parse_parenthesis.rs  parse_path.rs  parse_previous.rs  parse_scope.rs  parse_string.rs  parse_var_types.rs  parse_while_loop.rs  state_context.rs  step_checksum.rs  tools.rs
csml_interpreter/tests/: addition.rs  array.rs  as.rs  audio.rs  base64.rs  break.rs  carousel.rs  closures.rs  context.rs  continue.rs  debug.rs  division.rs  do.rs  equal.rs  event.rs  find.rs  foreach.rs  forget.rs  functions.rs  generic_component.rs  goto.rs  goto_vars.rs  greater.rs  greater_or_equal.rs  hex.rs  hold.rs  http.rs  if.rs  if_statement.rs  infinite_loop.rs  json_object.rs  length.rs  linter.rs  lower.rs  lower_or_equal.rs  mem_exists.rs  memory.rs  metadata.rs  multiplication.rs  number.rs  (+22 more)
csml_interpreter/tests/support/: mod.rs  tools.rs
csml_manager/: Cargo.toml
csml_manager/CSML/: flow.csml  flow2.csml
csml_manager/examples/: command_line.rs
csml_manager/src/: data.rs  db_interactions.rs  encrypt.rs  init.rs  interpreter_actions.rs  lib.rs  send.rs  tools.rs  utils.rs
csml_manager/src/db_connectors/: conversation.rs  conversations.rs  interactions.rs  memories.rs  messages.rs  mod.rs  nodes.rs  state.rs
csml_manager/src/db_interactions/: conversation.rs  db.rs  db_interactions_dynamo.rs  db_interactions_http_db.rs  db_interactions_mongo.rs  interactions.rs  memories.rs  messages.rs  nodes.rs  state.rs
csml_server/: .env.example  Cargo.toml  swagger.yaml
csml_server/src/: main.rs  routes.rs
csml_server/src/routes/: bot_versions.rs  bots.rs  clients.rs  conversations.rs  create_bot.rs  create_bot_version.rs  data.rs  get_bot_by_id.rs  get_bot_by_version_id.rs  get_bot_versions.rs  get_last_bot_version.rs  index.rs  memories.rs  messages.rs  mod.rs  run.rs  sns.rs  state.rs  status.rs  tools.rs  validate.rs
csml_server/static/: index.html
src/: lib.rs  (+11 more)
(+610 files in other folders)
