[package]
name = "csmlinterpreter"
version = "0.1.0"
authors = ["amerelo <alexis.merelo@clevy.io>"]
edition = "2018"

[lib]
name = "csmlinterpreter"
crate-type = ["rlib"]

[dependencies]
nom_locate = "1.0.0"
nom =  "5.1.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.66"
lazy_static = "1.4.0"
regex = "1"

[dependencies.curl]
version = "0.4.25"
default-features = false
features = ["mesalink"]

[[example]]
name = "test_flow"
