[package]
name = "csmlinterpreter"
version = "0.2.0"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>"
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CSML-by-Clevy/csml-interpreter"
homepage = "https://www.csml.dev/"
documentation = "https://docs.rs/nom"
description = """
The CSML (Conversational Standard Meta Language) is a Domain-Specific Language developed for creating conversational experiences easily.
"""
keywords = ["chatbot", "interpreter", "language", "csml"]
categories = ["text-processing"]
edition = "2018"

[lib]
name = "csmlinterpreter"
crate-type = ["rlib"]

[dependencies]
nom_locate = "2.0.0"
nom =  "5.1.1"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.67"
lazy_static = "1.4.0"
regex = "1"
ureq = { version = "0.12.0", features = ["json"] }

[dependencies.curl]
version = "0.4.28"
default-features = false
features = ["mesalink"]

[[example]]
name = "hello_world"

[[example]]
name = "metadata"

[[example]]
name = "event"

[[example]]
name = "memory"

[[example]]
name = "factorial"

[[example]]
name = "bot"