[package]
name = "csml"
version = "0.1.0"
authors = ["Alexis Merelo <alexis.merelo@clevy.io>"]
edition = "2018"

[dependencies]
csml_engine = { path = "../csml_engine" }
csml_interpreter = { path = "../csml_interpreter" }


serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.23"

crossterm = "0.21.0"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.5"
image = "0.23.14"
viuer = "0.5.1"

rand = "0.8.4"

clap = "2.33.3"
git2 = "0.13.20"
dotenv = "0.15.0"
