[package]
name = "csml_engine"
version = "1.6.4"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Engine is a conversational engine designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
readme = "../README.md"
license = "Apache-2.0"
edition = "2018"

[features]
mongo = ["mongodb", "bson", "futures"]
dynamo = ["rusoto_core", "rusoto_dynamodb", "rusoto_s3", "serde_dynamodb", "log", "env_logger"]
postgresql = ["diesel", "diesel_migrations"]

[dependencies.diesel_migrations]
version = "1.4.0"
optional = true

[dependencies.diesel]
version = "1.4.7"
optional = true
features = ["postgres", "chrono", "uuidv07"]

[dependencies.mongodb]
version = "2.0.0"
optional = true
default-features = false
features = ["sync"]

[dependencies.futures]
version = "0.3.15"
optional = true

[dependencies.bson]
version = "2.0.0"
features = ["chrono-0_4"]
optional = true

[dependencies.serde_dynamodb]
version = "0.7.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_core]
version = "0.46.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_dynamodb]
version = "0.46.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_s3]
version = "0.46.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.log]
version = "0.4.0"
default_features = false
optional = true

[dependencies.env_logger]
version = "0.8.4"
default_features = false
optional = true

[dependencies]
csml_interpreter = { version = "1.6.4", path = "../csml_interpreter" }
multimap = "0.8.2"
md-5 = "0.9.1"
chrono = { version = "0.4.19", features = ["serde"]}
rand = "0.7.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.67"
openssl = { version = "0.10.35", features = ["vendored"] }
base64 = "0.13.0"
hex = "0.4.2"
tokio = "1.4.0"

ureq = { version = "1.5.1", features = ["json"] }
bincode = "1.3.1"

[[example]]
name = "command_line"
