[package]
name = "csml_interpreter"
version = "1.8.1"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Interpreter is the official interpreter for the CSML programming language, a DSL designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "csml_interpreter"
crate-type = ["rlib"]

[dependencies]
nom_locate = "2.1.0"
nom =  "5.1.2"
rand = "0.7.3"
jsonwebtoken = "7"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.79"
phf = { version = "0.8", features = ["macros"]}
regex = "1.4.1"
ureq = { version = "2.3.0", features = ["json"] }
rustls = { version = "0.20.0", features = ["dangerous_configuration"] }

lettre = "0.10.0-rc.3"

typetag = "0.1"
bincode = "1.3.1"
base64 = "0.13.0"
hex = "0.4.2"
openssl = { version = "0.10.35", features = ["vendored"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "v1"] }
log = "0.4.14"
env_logger= "0.9.0"

[[example]]
name = "hello_world"

[[example]]
name = "metadata"

[[example]]
name = "event"

[[example]]
name = "memory"

[[example]]
name = "factorial"

[[example]]
name = "bot"
