[package]
name = "csml_interpreter"
version = "1.11.0-rc5"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Interpreter is the official interpreter for the CSML programming language, a DSL designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "csml_interpreter"
crate-type = ["rlib"]

[dependencies]
nom_locate = "4.0.0"
nom =  "7.1"
rand = "0.8"
jsonwebtoken = "7"
chrono = "0.4"
chrono-tz = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.23"
serde-xml-rs = "0.5.1"
html-escape = "0.2.11"
quickxml_to_serde = {version = "0.5.0" }
libc = "0.2.112"
phf = { version = "0.10.1", features = ["macros"]}
regex = "1.5.6"
ureq = { version = "2.4.0", features = ["json"] }
urlencoding = "2.1"
url = "2.2.2"
rustls = { version = "0.20.2", features = ["dangerous_configuration"] }

lettre = "0.10.0-rc.4"

typetag = "0.1"
bincode = "1.3.3"
base64 = "0.13.0"
hex = "0.4.3"
openssl = { version = "0.10.40", features = ["vendored"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "v1"] }
log = "0.4.14"
env_logger= "0.9.0"

[[example]]
name = "hello_world"

[[example]]
name = "metadata"

[[example]]
name = "event"

[[example]]
name = "memory"

[[example]]
name = "factorial"

[[example]]
name = "bot"
