[package]
name = "csml_manager"
version = "1.1.0"
authors = ["Alexis Merelo <alexis.merelo@clevy.io>"]
license = "Apache-2.0"
edition = "2018"

[features]
tmp = []
http = ["http_db", "reqwest"]
mongo = ["mongodb", "bson"]

[dependencies.mongodb]
version = "0.9.2"
optional = true

[dependencies.bson]
version = "0.14.1"
optional = true

[dependencies.http_db]
path = "../http_db"
optional = true

[dependencies.reqwest]
version = "0.9.24"
features = ["rustls-tls"]
optional = true

[dependencies]
csmlinterpreter = { path = "../csml_interpreter" }
multimap = "0.8.1"
md-5 = "0.8.0"
chrono = "0.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.30"
base64 = "0.12.3"

[dependencies.curl]
version = "0.4.31"
default-features = false
features = ["mesalink"]


[[example]]
name = "command_line"
