[package]
name = "csml_manager"
version = "1.1.0"
authors = ["Alexis Merelo <alexis.merelo@clevy.io>"]
license = "Apache-2.0"
edition = "2018"

[features]
tmp = []
http = ["http_db", "reqwest"]
mongo = ["mongodb", "bson"]
dynamo = ["rusoto_core", "rusoto_dynamodb", "serde_dynamodb"]

[dependencies.mongodb]
version = "0.9.2"
optional = true

[dependencies.bson]
version = "0.14.1"
optional = true

[dependencies.http_db]
path = "../http_db"
optional = true

[dependencies.reqwest]
version = "0.9.24"
features = ["rustls-tls"]
optional = true

[dependencies.serde_dynamodb]
version = "0.5.1"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_core]
# impossible to build with rustls in 0.45.0, stick to 0.44.0
version = "0.44.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_dynamodb]
version = "0.44.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies]
csml_interpreter = { path = "../csml_interpreter" }
multimap = "0.8.1"
md-5 = "0.8.0"
chrono = "0.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10.30"
base64 = "0.12.3"
curl = { version = "0.4.31", default-features = false, features = ["mesalink"] }
tokio = "0.2.22"

[[example]]
name = "command_line"
