[package]
name = "csml_server"
version = "1.3.5"
authors = ["François Falala-Sechet <francois@clevy.io>"]
edition = "2018"

[dependencies]
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-rt = "1.0.0"
actix-service = "1.0.0"
actix-cors = "0.2.0"
actix-files = "0.2.2"

bytes = "0.5.2"
futures = "0.3.1"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

csml_engine = { path = "../csml_engine"}
csml_interpreter = { path = "../csml_interpreter" }
