[package]
name = "csml_server"
version = "1.8.1"
authors = ["François Falala-Sechet <francois@clevy.io>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.2", features = ["rustls"] }
actix-rt = "1.1.1"
actix-service = "2.0.0"
actix-cors = "0.5.4"
actix-files = "0.5.0"

bytes = "0.5.2"
futures = "0.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

log = "0.4.14"
env_logger= "0.9.0"

csml_engine = { path = "../csml_engine"}
csml_interpreter = { path = "../csml_interpreter" }
