[package]
name = "csml_server"
version = "1.11.0-rc4"
authors = ["François Falala-Sechet <francois@clevy.io>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0", features = ["rustls"] }
actix-rt = "2.7"
actix-service = "2.0"
actix-cors = "0.6"
actix-files = "0.6"
awc = "3.0"

bytes = "1.1"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

log = "0.4"
env_logger= "0.9"

csml_engine = { path = "../csml_engine"}
csml_interpreter = { path = "../csml_interpreter" }
