[package]
name = "csml_android"
version = "0.1.0"
edition = "2021"

[dependencies]
csml_engine = {version = "1.9.0-rc0",  path = "../../csml_engine", features = ["mongo"]}
csml_interpreter = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# [target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"



[lib]
name = "csml_android"
crate-type = ["dylib"]