[package]
name = "aws_lambda"
version = "0.1.0"
authors = ["Alexis Merelo <alexis.merelo@clevy.io>"]
edition = "2018"

[[bin]]
name = "aws_lambda"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2"
tokio = { version = "1", features = ["macros"] }

ring = "0.16"

csml_engine = { path = "../../csml_engine"}
csml_interpreter = { path = "../../csml_interpreter" }