[package]
name = "csmllib"
version = "0.1.0"
edition = "2021"

[lib]
name = "csmllib"
crate-type = ["staticlib"]

[dependencies]
csml_engine = {version = "1.10.2",  path = "../../csml_engine", features = ["mongo"]}
csml_interpreter = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
