[package]
name = "csmllib"
version = "0.1.0"
edition = "2021"

[lib]
name = "csmllib"
crate-type = ["staticlib"]

[dependencies]
csml_engine = { version = "1.11.1", path = "../../csml_engine" }
csml_interpreter = { version = "1.11.1", path = "../../csml_interpreter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
