[package]
name = "csml_engine_node"
version = "1.11.0-rc4"
authors = ["Alexis Merelo <alexis.merelo@clevy.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "csml_engine_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
# neon-serde = "0.4.0"
csml_engine = { version = "1.11.0-rc4", path = "../../../csml_engine", features = ["mongo", "postgresql", "dynamo"]}
csml_interpreter = { version = "1.11.0-rc4", path = "../../../csml_interpreter"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
